		Note: Always leave this option disabled unless you are building the Stack for use in the LDS.
	- fixed memory leaks (issue #27, #28, #29)
	- fixed encoding of uMessageSecurityModes (issue #36):
		The value returned from OpcUa_Endpoint_GetMessageSecureChannelSecurityPolicy
		used the wrong enumeration type OpcUa_MessageSecurityMode instead of
		OPCUA_ENDPOINT_MESSAGESECURITYMODE values.

Version 1.03.340
	
	Highlights: 
		- OPC UA 1.03 compatible.
		- all BSI reported security issues addressed.
		- linux platform added.
		- windows and linux layers work with 32 and 64 bit O/S.
		- optimised async sockets handling implemented.
		- windows and linux implement full IPv6 support.
		- pki store implementation reworked to be more flexible.
		- conformant with strict aliasing rules.
		- enumeral values are checked on receive.
		- https protocol reworked and now basically stable.
		- negotiates tls1 to tls1_2, supports DHE protocols.
		- tested with gcc's sanitizer asan, tsan and ubsan.
			
	API changes from the 1.02.336 version:
		- 3393 OpcUa_ProxyStubConfiguration: The data type has been extended.
				bProxyStub_Trace_Enabled set to OpcUa_True to enable traces.
				iSerializer_MaxRecursionDepth if unsure, set to -1.
		- 3394 OpcUa_Xxx_CopyTo: This set of functions is not supported.
		- 3395 OpcUa_Guid_Copy: This function is deprecated now and should
				not be used any more, because the source and destination
				parameters were exchanged in the past, and thus it is not clear
				what this function can be expected to do.
		- 3396 OpcUa_EncodeabeTypeTable_AddTypes: The function signature has 
				changed.
				noOfEncodeableType was removed.
				ppTypes is assumed to be null-terminated.
		- 3397 OpcUa_Endpoint_Open: The function signature has changed.
				sTransportProfileUri was removed because it is redundant.
				bListenOnAllInterfaces was added.  If unsure, use OpcUa_True.
				pPrivateKey->Key.Data must be non-zero, even if no security.